# ai-devs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  hello.py  pyproject.toml
ai_dev3/: anti_captcha.py  categories.py  censorship.py  cities.py  json_report.py  mp3.py  polygon.py  robotid.py  veryfi.py
ai_dev3/utils/: api_client.py  open_ai.py
prompts/: banan-robot-operator-hack-way.txt  banan-robot-operator.txt
src/ai_dev3/: anti_captcha.py  categories.py  censorship.py  cities.py  json_report.py  mp3.py  polygon.py  robotid.py
src/ai_dev3/S01E01/: anti_captcha.py
src/ai_dev3/S01E02/: veryfi.py
src/ai_dev3/S01E03/: json_report.py
src/ai_dev3/S01E05/: censorship.py
src/ai_dev3/S02E01/: mp3.py
src/ai_dev3/S02E02/: cities.py
src/ai_dev3/S02E03/: robotid.py
src/ai_dev3/S02E04/: categories.py
src/ai_dev3/S02E05/: images.py  main.py  questions.py  recordings.py  types.py
src/ai_dev3/S03E01/: data.py  keywords.py  main.py  types.py
src/ai_dev3/S03E02/: VectorsService.py  load_reports.py  main.py  types.py
src/ai_dev3/S03E03/: AiAgent.py  main.py
src/ai_dev3/S03E04/: ApiService.py  Investigator.py  OpenAiService.py  main.py
src/ai_dev3/S03E05/: UsersDb.py  UsersGraph.py  main.py  types.py
src/ai_dev3/S04E01/: Investigator.py  PhotosApi.py  main.py
src/ai_dev3/S04E01/actions/: check_image_quality.py  create_identikit.py  extract_images.py  pick_best_identikit.py
src/ai_dev3/S04E02/: fine_tuning_data.py  main.py
src/ai_dev3/S04E02/data/: finetunning.jsonl
src/ai_dev3/S04E03/: AiAgent.py  PageScrapper.py  main.py  types.py
src/ai_dev3/S04E03/ai_requests/: look_for_an_answer.py  pick_best_link.py
src/ai_dev3/S04E04/: rest_api.py  task.py  verify_flight.py
src/ai_dev3/infrastructure/: DbApiService.py
src/ai_dev3/utils/: files.py  http.py  langfuse.py  open_ai.py  url.py
